Fix word wrapping in configuration map

--- a/src/styles/components/configuration-map/styles.less
+++ b/src/styles/components/configuration-map/styles.less
@@ -44,6 +44,11 @@
       word-wrap: break-word;
     }
 
+    &-label,
+    &-value {
+      overflow: hidden;
+    }
+
     // We need specificity here to override table styles
     &-action,
     td&-action {
@@ -69,6 +74,7 @@
         code,
         pre {
           white-space: pre-wrap;
+          word-break: break-all;
         }
       }
     }
